--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "mac-minitables"
 version = "0.1.0"
 authors = ["Daan Sprenkels <hello@dsprenkels.com>"]
 description = "Lookup table tool for reversing MAC address hashes"
+edition = "2018"
 
 [profile.dev]
 opt-level = 2
@@ -16,7 +17,7 @@ lazy_static = "1"
 log = "0.4"
 quick-error = "2.0"
 regex = "1"
-sha2 = "0.8"
+sha2 = "0.9"
 
 [dependencies.clap]
 version = "2"
